--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音声合成</title>
 </head>
 <body>
-    <h1>テキストを音声に変換</h1>
-    <form id="synthesize-form">
-        <textarea id="text-input" placeholder="テキストを入力"></textarea><br>
-        <button type="submit">音声生成</button>
+    <h1>音声合成テスト</h1>
+    <form id="synth-form">
+        <textarea id="text-input" placeholder="テキストを入力"></textarea><br><br>
+        <button type="submit">音声を生成</button>
     </form>
-
-    <audio id="audio-player" controls></audio>
+    <br>
+    <audio id="audio-output" controls></audio>
 
     <script>
-        document.getElementById('synthesize-form').addEventListener('submit', async (event) => {
+        document.getElementById("synth-form").addEventListener("submit", async function(event) {
             event.preventDefault();
-            const text = document.getElementById('text-input').value;
-            const response = await fetch('https://your-heroku-app-url/synthesize/', {
+            const text = document.getElementById("text-input").value;
+
+            const response = await fetch('/synthesize/', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ text })
+                body: JSON.stringify({ text: text }),
             });
 
             const data = await response.json();
-            const audio = new Audio('data:audio/mp3;base64,' + data.audio);
-            audio.play();
+            const audio = document.getElementById("audio-output");
+            audio.src = "data:audio/wav;base64," + data.audio;
         });
     </script>
 </body>
