--- a/app/static/voice_synthesizer.html
+++ b/app/static/voice_synthesizer.html
@@ -1,36 +1,31 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>音声合成</title>
-</head>
-<body>
-    <h1>音声合成テスト</h1>
-    <form id="synth-form">
-        <textarea id="text-input" placeholder="テキストを入力"></textarea><br><br>
-        <button type="submit">音声を生成</button>
-    </form>
-    <br>
-    <audio id="audio-output" controls></audio>
+from fastapi import FastAPI
+from fastapi.responses import HTMLResponse
+from fastapi.staticfiles import StaticFiles
+from model import synthesize_text
+from pydantic import BaseModel
+import base64
+from fastapi.responses import JSONResponse
 
-    <script>
-        document.getElementById("synth-form").addEventListener("submit", async function(event) {
-            event.preventDefault();
-            const text = document.getElementById("text-input").value;
+# FastAPIのインスタンスを作成
+app = FastAPI()
 
-            const response = await fetch('/synthesize/', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ text: text }),
-            });
+# 静的ファイル（HTML, CSS, JSなど）を提供する
+app.mount("/static", StaticFiles(directory="app/static"), name="static")
 
-            const data = await response.json();
-            const audio = document.getElementById("audio-output");
-            audio.src = "data:audio/wav;base64," + data.audio;
-        });
-    </script>
-</body>
-</html>
+class TextRequest(BaseModel):
+    text: str
+
+# /synthesize エンドポイントを作成
+@app.post("/synthesize/")
+async def synthesize(request: TextRequest):
+    # テキストから音声を生成
+    audio_data = synthesize_text(request.text)
+    
+    # 音声データをBase64エンコードして返す
+    audio_base64 = base64.b64encode(audio_data).decode('utf-8')
+    return JSONResponse(content={"audio": audio_base64})
+
+# 最初にアクセスしたときにindex.htmlを返す
+@app.get("/", response_class=HTMLResponse)
+async def get_homepage():
+    return HTMLResponse(content=open("app/static/index.html").read())
